CO-280: Columns wrapping incorrectly- Choice Matrix (overflow image bug)

--- a/components/corespring/match/src/client/styles.less
+++ b/components/corespring/match/src/client/styles.less
@@ -234,6 +234,10 @@
     border-top: solid 2px #cccccc;
   }
 
+  img {
+    max-width: 100%;
+  }
+
   .question-header {
     color: #999;
     background: none;
